--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Applied Cryptography</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="/">Applied Cryptography</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/caesar_cipher">Caesar Cipher🔒</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/block_cipher_xor">Block Cipher-XOR🔒</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/vigenere">Vigenère Cipher🔒</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/diffie_hellman">Diffie-Hellman🔒</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/rsa_basic">RSA Basic🔒</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/hash">Hash Functions🔒</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
