--- a/templates/caesar_cipher.html
+++ b/templates/caesar_cipher.html
@@ -15,7 +15,7 @@
         <div class="row mt-4">
             <div class="col-md-4 mb-3">
                 <div class="card">
-                    <div class="card-header">Shift value:</div>
+                    <div class="card-header">Shift Value:</div>
                     <div class="card-body">
                         <textarea id="shift" class="form-control" rows="1">2 3 2</textarea>
                     </div>
@@ -39,11 +39,12 @@
             </div>
         </div>
 
+        
         <div class="row mb-3">
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <strong>Select one:</strong>
+                        <strong>Select One:</strong>
                         <div class="form-check form-check-inline ms-3">
                             <input class="form-check-input" type="radio" name="operation" id="encrypt" value="encrypt" checked>
                             <label class="form-check-label" for="encrypt">Encrypt</label>
@@ -63,6 +64,7 @@
             </div>
         </div>
 
+        
         <div class="row">
             <div class="col">
                 <h2 class="text-center mb-3" id="table-title">Encryption 🔐</h2>
@@ -79,7 +81,7 @@
             </div>
         </div>
 
-        <!-- File-based Caesar Cipher -->
+        
         <div class="card mt-5">
             <div class="card-header bg-secondary text-white">
                 <h4 class="mb-0">File-based Caesar Cipher</h4>
