--- a/templates/rsa_basic.html
+++ b/templates/rsa_basic.html
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="mb-3">
-                                        <strong>Select operation:</strong>
+                                        <strong>Select Operation:</strong>
                                         <div class="form-check form-check-inline ms-3">
                                             <input class="form-check-input" type="radio" name="rsa-operation" id="rsa-encrypt" value="encrypt" checked>
                                             <label class="form-check-label" for="rsa-encrypt">Encrypt</label>
