--- a/templates/rsa_basic.html
+++ b/templates/rsa_basic.html
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="alert alert-warning">
-                        <strong>Note:</strong> This is a simplified implementation of RSA for educational purposes. In practice, RSA uses much larger prime numbers (1024-4096 bits) and additional padding schemes for secure encryption.
+                        <strong>Note:</strong> This is a simplifield implementation of RSA for educational purposes. In practice, RSA uses much larger prime numbers (1024-4096 bits) and additional padding schemes for secure encryption.
                     </div>
                 </div>
             </div>
