--- a/templates/hash.html
+++ b/templates/hash.html
@@ -8,7 +8,7 @@
     <div class="card-body">
         <h4>About Hashing</h4>
         <p>
-            Hash functions map data of arbitrary size to fixed-size values. Common algorithms include SHA256, SHA512, MD5, and SHA1.
+            Hash functions map data of arbitrary size to the fixed-size values. Common algorithms include SHA256, SHA512, MD% and SHA1.
         </p>
 
         <div class="row">
