--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Applied Cryptography{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{% block title %}Applied Cryptography{% endblock %}</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="/">Applied Cryptography</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/caesar_cipher">Caesar Cipher🔒</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/block_cipher_xor">Block Cipher-XOR🔒</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/vigenere">Vigenère Cipher🔒</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/diffie_hellman">Diffie-Hellman🔒</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/rsa_basic">RSA Basic🔒</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/hash">Hash Functions🔒</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container mt-4">
-        {% block content %}{% endblock %}
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-nav">
+    <div class="container">
+      <a class="navbar-brand site-title" href="/">APPLIED CRYPTOGRAPHY</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link{% if request.path == '/' %} active{% endif %}" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/caesar_cipher">Caesar Cipher</a></li>
+          <li class="nav-item"><a class="nav-link" href="/block_cipher_xor">Block Cipher-XOR</a></li>
+          <li class="nav-item"><a class="nav-link" href="/vigenere">Vigenère Cipher</a></li>
+          <li class="nav-item"><a class="nav-link" href="/diffie_hellman">Diffie-Hellman</a></li>
+          <li class="nav-item"><a class="nav-link" href="/rsa_basic">RSA Basic</a></li>
+          <li class="nav-item"><a class="nav-link" href="/hash">Hash Functions</a></li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <div class="container mt-4">
+    {% block content %}{% endblock %}
+  </div>
+
+  <footer>
+    CSAC 329 | GROUP 6 | DE SILVA | PARAÑAL | VALLE
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
