EDIT block_cipher_xor.html to incorporate with style.css

--- a/templates/block_cipher_xor.html
+++ b/templates/block_cipher_xor.html
@@ -8,7 +8,7 @@
         <!-- Info Card -->
         <div class="card mb-4">
             <div class="card-header bg-primary text-white">
-                <h2 class="mb-0">Block Cipher - XOR</h2>
+                <h2 class="mb-0">Block Cipher - XOR (Symmetric Algorithm) </h2>
             </div>
             <div class="card-body">
                 <h4>About XOR Cipher</h4>
@@ -149,4 +149,3 @@
 </script>
 
 {% endblock %}
-
