EDIT caesar_cipher.html to incorporate with style.css

--- a/templates/caesar_cipher.html
+++ b/templates/caesar_cipher.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card">
     <div class="card-header bg-success text-white">
-        <h2 class="mb-0">Caesar Cipher</h2>
+        <h2 class="mb-0">Caesar Cipher (Symmetric Algorithm)</h2>
     </div>
     <div class="card-body">
         <h4>About Caesar Cipher</h4>
@@ -63,7 +63,6 @@
                 <button id="process-btn" class="btn btn-success px-5"> ENTER </button>
             </div>
         </div>
-
         
         <div class="row">
             <div class="col">
@@ -81,7 +80,6 @@
             </div>
         </div>
 
-        
         <div class="card mt-5">
             <div class="card-header bg-secondary text-white">
                 <h4 class="mb-0">File-based Caesar Cipher</h4>
