--- a/templates/diffie_hellman.html
+++ b/templates/diffie_hellman.html
@@ -6,7 +6,7 @@
         <div class="col-md-10 offset-md-1">
             <div class="card">
                 <div class="card-header bg-info text-white">
-                    <h2 class="mb-0">Diffie-Hellman Key Exchange</h2>
+                    <h2 class="mb-0">Diffie-Hellman Key Exchange (Asymmetric Algorithm) </h2>
                 </div>
                 <div class="card-body">
                     <div class="mb-4">
