--- a/templates/hash.html
+++ b/templates/hash.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card">
     <div class="card-header bg-dark text-white">
-        <h2 class="mb-0">Hashing Functions.</h2>
+        <h2 class="mb-0">Hashing Functions </h2>
     </div>
     <div class="card-body">
         <h4>About Hashing</h4>
