--- a/templates/rsa_basic.html
+++ b/templates/rsa_basic.html
@@ -6,7 +6,7 @@
         <div class="col-md-10 offset-md-1">
             <div class="card">
                 <div class="card-header bg-warning">
-                    <h2 class="mb-0">RSA Basic</h2>
+                    <h2 class="mb-0">RSA Basic (Asymmetric Algorithm) </h2>
                 </div>
                 <div class="card-body">
                     <div class="mb-4">
