--- a/templates/vigenere.html
+++ b/templates/vigenere.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="card">
     <div class="card-header bg-info text-white">
-        <h2 class="mb-0">Vigenère Cipher</h2>
+        <h2 class="mb-0">Vigenère Cipher (Symmetric Algorithm) </h2>
     </div>
     <div class="card-body">
         <h4>About Vigenère Cipher</h4>
