--- a/templates/vigenere.html
+++ b/templates/vigenere.html
@@ -32,7 +32,7 @@
                 <div class="card">
                     <div class="card-header">Input</div>
                     <div class="card-body">
-                        <textarea id="vigenere-input-text" class="form-control" rows="2">Hello bob!</textarea>
+                        <textarea id="vigenere-input-text" class="form-control" rows="2"> TRY HERE </textarea>
                     </div>
                 </div>
             </div>
