--- a/templates/caesar_cipher.html
+++ b/templates/caesar_cipher.html
@@ -25,7 +25,7 @@
                 <div class="card">
                     <div class="card-header">Input</div>
                     <div class="card-body">
-                        <textarea id="input-text" class="form-control" rows="2">Hello bob!</textarea>
+                        <textarea id="input-text" class="form-control" rows="2"> Hello!</textarea>
                     </div>
                 </div>
             </div>
